--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@ footer {
       <p>&copy; 2022 Haitian Fresh Clothes. All rights reserved.</p>
     </footer>
     <script>
-      // JavaScript code for adding items to cart and checkout process
+      
 
-// Define an array to hold items in the shopping cart
+//  cart
 var cartItems = [];
 
-// Function to add an item to the cart
+//
 function addToCart(itemName, itemPrice) {
     var item = {
         name: itemName,
@@ -101,7 +101,7 @@ function addToCart(itemName, itemPrice) {
     alert("Item added to cart!");
 }
 
-// Function to display the contents of the cart
+//
 function displayCart() {
     var cart = document.getElementById("cart");
     cart.innerHTML = "";
